// Copyright 2022 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google.cmrt.sdk;

option java_outer_classname = "DetailedExecutionResultProto";
option java_package = "com.google.cmrt.sdk";

// For faster allocations of sub-messages.
option cc_enable_arenas = true;

// The status of detailed execution result.
enum DetailedExecutionStatus {
  DETAILED_EXECUTION_STATUS_UNKNOWN = 0;  // Unknown status.
  DETAILED_EXECUTION_STATUS_SUCCESS = 1;  // The execution is successful.
  DETAILED_EXECUTION_STATUS_FAILURE = 2;  // The execution is failed.
  DETAILED_EXECUTION_STATUS_RETRY = 3;    // The execution is retriable.
}

// The detailed result of the execution.
message DetailedExecutionResult {
  DetailedExecutionStatus status = 1;  // The execution status.
  // The failure status code.
  uint64 status_code = 2;
  // Returned if the execution failed.
  string error_message = 3;
  // The correlation id of the related async context.
  string correlation_id = 4;
}
